# germina

./: .gitignore  Cargo.toml  base.kit  config.json
base/: Cargo.toml
base/src/: chunk.rs  geometry.rs  graphics.rs  kit.rs  lib.rs  point.rs  shape.rs  side.rs  sprite.rs
base/src/chunk/: data.rs  layout.rs  point.rs
base/src/kit/: asset.rs  resources.rs
base/src/point/: block.rs  chunk.rs  cluster.rs  global.rs  in_cluster.rs  world.rs
base/src/sprite/: map.rs  pack.rs  spritemap.rs
client/: Cargo.toml
client/client_core/: Cargo.toml
client/client_core/src/: render.rs
client/core_client/: Cargo.toml
client/core_client/src/: render.rs
client/engine/: Cargo.toml
client/engine/src/: engine.rs  lib.rs  shape.rs  state.rs  view.rs
client/render_wgpu/: Cargo.toml
client/render_wgpu/shaders/: def.wgsl
client/render_wgpu/src/: lib.rs  mesh.rs  render.rs  storage.rs  texture.rs
client/src/: main.rs  scheduler.rs
kits/base/tiles/: test.json
pack/: test.toml
server/: Cargo.toml
server/src/: config.rs  error.rs  kit.rs  load.rs  main.rs
server/src/kit/: model.rs  resources.rs
server/src/kit/model/: tile.rs
server/src/load/: model.rs
server/src/load/model/: tile.rs
tools/germina-pack/: Cargo.toml
tools/germina-pack/src/: error.rs  info.rs  main.rs  pack.rs
