[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["nano <nanoqsh@gmail.com>"]
description = "Germina Server"

[dependencies]
base = { path = "../base" }
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.24"
env_logger = "0.9"
fxhash = "0.2"
json = { package = "json5", version = "0.4" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
